kubernetes/TrueNAS-Int/deployments/storage/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: storage
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:RELEASE.2024-06-11T03-13-30Z
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
        - name: data
          hostPath:
            path: /data/BigPool/AppData/Minio
