kubernetes/TrueNAS-Int/deployments/storage/minio/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: minio
    namespace: storage
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:UaBQmEu4XYq5ElDCvq2N8hOIWBVZErjpYg==,iv:OREiXYfk6LQniq0KHzjjdC1bKv42sp2doc5AerrtUM4=,tag:JohmxuaGiOHP/1VH00GvwA==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:5weeq6E=,iv:jv7YwwfKhs1MVUOkCaxzdkCydDVdpULj306qOzU1+TQ=,tag:kx/2Q9jitEjgOT4FCQteLA==,type:str]
              port: ENC[AES256_GCM,data:KdI6QQ==,iv:kJYV4Yd3Cy+le9T1IdYfNbH2LYnpQLtkjJUa+J6QTnw=,tag:IMW4po/CPai4ON8q05ut4w==,type:int]
        - match: ENC[AES256_GCM,data:kCyzFlscTbZhMktw20fED9WVTl9vRYNYrfTP157kPHjU,iv:yXpQLp2whvgywqGlctZxauYZDJ6iMqSaOtKND8TZc/g=,tag:0aCVdDwbjllBKoUpGeDB1g==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:5PYnkg8=,iv:g3LuGnilddhNvJEw26SUMVIjorJ8wnwb0Nm8QAoliAE=,tag:UfkOIl65YAP4b26g3ntvMg==,type:str]
              port: ENC[AES256_GCM,data:AM+MeQ==,iv:TAuP3KYblU2ZB61aJvDrcEd0botQX+Gj1UoGrQB08x4=,tag:/HMHQc4iUCKlJNlmpbofGQ==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:yDiUwIcDXi1h3Q==,iv:vNd6O8o3XY4oOQUpPT0VrgJF+NhxzVHwobB7C9lmQ0k=,tag:wUqCpvrEeWWjjva5qY6/0g==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFNnV4bmRZVGNEM1YwN2VB
[...]
            8o2mmTWs7tkMDOmXqrAwSAYAJssbvp/zgLU7paSbBss4qPOUbCsMvw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-13T16:56:02Z"
    mac: ENC[AES256_GCM,data:zQp24M+IXHZn+Pmp61hOQVKI9GEf9yzkgz1RufyM5t6xVWhj1Djgt3+w1KwhI/O1EjM/afAu4JSieYC4EafTmUvI1PdpSOiuqaW/OWAXxzlqRUfplsv8luIw1DO38F5nUdP72xmsgjDaPyPn6AUaKdoGmwhwkJN4/8lgg+gxYXE=,iv:TRL9GZHX79ZTkIUgy9+xLs0P00dbqbI4bxMcTxuIezY=,tag:a76P7ERukUU6D1e/YjpjUw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames)$
    version: 3.8.1
